--- a/branches/release_1.15/src/app/views/scripts/report/custom.phtml
+++ b/branches/release_1.15/src/app/views/scripts/report/custom.phtml
@@ -25,23 +25,31 @@ table#report-results tr th { margin: 0; padding: 5px; border: 1px solid black; b
     
     
 <span class="ui-widget" style="display: inline-block;" >
-<div id='field-desc' style="color:white; background-color:black; position: absolute; top: 100px; display: none"></div>    
+<div id='field-desc' style="color:white; background-color:black; position: absolute; top: 150px; display: none"></div>    
 <div style="margin-top:25px;">
     <input id="custom-report" size="80" name="criteria" value="<?=  $this->criteria;?>" />
 <?= $this->formSubmit("search", "Search >", array("class" => "submitbutton")); ?>
 </div>
 </span>
     
-</form>
-
 
 
 <? if($this->etdSet): ?>
 <div style="margin-top: 15px;">
+    
+<div style="margin-bottom: 5px;">
+  Number of Results: <?=count($this->etdSet->etds)?>
+  <?if (count($this->etdSet->etds)): ?>
+      <?= $this->formSubmit("export", "Export as CSV >", array("class" => "submitbutton")); ?>
+  <? endif ?>
+</div>    
 <table id="report-results">
     <tr> <?// header row ?>
         <? foreach($this->viewable_fields as $field): ?>
-            <th><?=$field['label']?></th>
+            <th>
+    <div><input type="checkbox" name="include[]" value="<?=$field['field']?>" <?=(in_array($field['field'], $this->csv_fields) ? 'checked' : '')?>></input></div>
+            <div><?=$field['label']?></div>
+            </th>
     
         <? endforeach ?>
     </tr>
@@ -56,6 +64,7 @@ table#report-results tr th { margin: 0; padding: 5px; border: 1px solid black; b
         </tr>
     <? endforeach ?>
 </table>
+    </form>
 </div>
 <? endif ?>
 
