--- a/branches/release_1.15/src/app/views/scripts/report/standard.phtml
+++ b/branches/release_1.15/src/app/views/scripts/report/standard.phtml
@@ -44,7 +44,7 @@
     
     <div> <input type="checkbox" name="document_type[]" value='ALL' class="checkall"> All </div>
     <div> <input type="checkbox" name="document_type[]" value='Dissertation'> Dissertation </div>
-    <div> <input type="checkbox" name="document_type[]" value="Master's Thesis"> Master's Thesis </div>
+    <div> <input type="checkbox" name="document_type[]" value="MasterXs Thesis"> Master's Thesis </div>
     <div> <input type="checkbox" name="document_type[]" value='Honors Thesis'> Honors Thesis </div>
     
     </fieldset>
