reformatted standard report, added date picker, added beta indicator

--- a/branches/release_1.15/src/app/views/scripts/report/advanced.phtml
+++ b/branches/release_1.15/src/app/views/scripts/report/advanced.phtml
@@ -4,7 +4,7 @@
 </style>
 
 <div>
-    <h1><?=$this->title?></h1>
+    <h1><?=$this->title?><span style="font-size: 10px; color: red">(Beta)</span></h1>
     <a href="<?= $this->url(array("action" => "standard"))?>">Switch to Standard Report</a>
 </div>
 
