--- a/branches/release_1.15/src/app/views/scripts/report/index.phtml
+++ b/branches/release_1.15/src/app/views/scripts/report/index.phtml
@@ -17,7 +17,7 @@
   <?= $this->FiletypeIcon("application/x-shockwave-flash") ?></li>
   <li><a href="<?= $this->url(array('action' => 'page-length')) ?>">Document Length</a>
   <?= $this->FiletypeIcon("application/x-shockwave-flash") ?></li>
-  <li><a href="<?= $this->url(array('action' => 'standard')) ?>">Create A Report</a>
+  <li><a href="<?= $this->url(array('action' => 'standard')) ?>">Create A Report <span style="font-size: 10px; color: red">(Beta)</span></a>
   <?= $this->FiletypeIcon("text/csv") ?></li>
 </ul>
 
