--- a/branches/release_1.15/src/app/views/scripts/report/standard.phtml
+++ b/branches/release_1.15/src/app/views/scripts/report/standard.phtml
@@ -1,127 +1,180 @@
+<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
 <div>
-    <h1><?=$this->title?></h1>
+    <h1><?=$this->title?><span style="font-size: 10px; color: red">(Beta)</span></h1>
     <a href="<?= $this->url(array("action" => "advanced"))?>">Switch to Advanced Report</a>
 </div>
 
-<div>
+<div style="margin-top:15px">
 <form method="post" id="standard_report_form"  action="<?= $this->url(array("action" => "preview_export"))?>" target="_blank">
-    <div style="margin-top:15px">
     <fieldset>
         <b>Status:</b>
     
-    <div> <input type="checkbox" name="status[]" value='ALL' class="checkall" id="status-all"> All </div>
-    <div> <input type="checkbox" name="status[]" value='inactive'> Inactive </div>
-    <div> <input type="checkbox" name="status[]" value='draft'> Draft</div>
-    <div> <input type="checkbox" name="status[]" value='submitted'> Submitted</div>
-    <div> <input type="checkbox" name="status[]" value='reviewed'> Reviewed</div>
-    <div> <input type="checkbox" name="status[]" value='approved'> Approved</div>
-    <div> <input type="checkbox" name="status[]" value='published' id="pub-box"> published 
-        <input type="text" size="8" id="pub-from" name="pub-from" disabled> TO
-        <input type="text" size="8" id="pub-to" name="pub-to" disabled></div>
-    </div>
+    <table>
+     <tr>
+      <td colspan="3">    
+       <input type="checkbox" name="status[]" value='ALL' class="checkall" id="status-all"> All
+      </td>
+     </tr>
+    <tr>
+     <td><input type="checkbox" name="status[]" value='inactive'> Inactive</td>
+     <td><input type="checkbox" name="status[]" value='draft'> Draft</td>
+     <td><input type="checkbox" name="status[]" value='submitted'> Submitted</td>
+    </tr>
+    <tr>
+     <td><input type="checkbox" name="status[]" value='reviewed'> Reviewed</td>
+     <td><input type="checkbox" name="status[]" value='approved'> Approved</td>
+     <td><input type="checkbox" name="status[]" value='published' id="pub-box"> Published 
+      <input type="text" size="10" id="pub-from" name="pub-from" value="YYYYMMDD" disabled> TO
+      <input type="text" size="10" id="pub-to" name="pub-to" value="YYYYMMDD" disabled></td>
+      </tr>
+      </table>
 
     </fieldset>
         
     <fieldset>
         <b>Degree:</b>
-    
-    <div> <input type="checkbox" name="degree_name[]" value='ALL' class="checkall"> All </div>
-    <div> <input type="checkbox" name="degree_name[]" value='BA'> BA </div>
-    <div> <input type="checkbox" name="degree_name[]" value='BBA'> BBA </div>
-    <div> <input type="checkbox" name="degree_name[]" value='BS'> BS </div>
-    <div> <input type="checkbox" name="degree_name[]" value='MA'> MA </div>
-    <div> <input type="checkbox" name="degree_name[]" value='MDiv'> MDiv </div>
-    <div> <input type="checkbox" name="degree_name[]" value='MPH'> MPH </div>
-    <div> <input type="checkbox" name="degree_name[]" value='MS'> MS </div>
-    <div> <input type="checkbox" name="degree_name[]" value='MSPH'> MSPH </div>
-    <div> <input type="checkbox" name="degree_name[]" value='MTS'> MTS </div>
-    <div> <input type="checkbox" name="degree_name[]" value='PhD'> PhD </div>
-    <div> <input type="checkbox" name="degree_name[]" value='ThD'> ThD </div>
+        
+    <table>
+     <tr>
+      <td colspan="6"> <input type="checkbox" name="degree_name[]" value='ALL' class="checkall"> All</td>
+     </tr>
+     <tr>
+      <td><input type="checkbox" name="degree_name[]" value='BA'> BA</td>
+      <td><input type="checkbox" name="degree_name[]" value='BBA'> BBA</td>
+      <td><input type="checkbox" name="degree_name[]" value='BS'> BS</td>
+      <td><input type="checkbox" name="degree_name[]" value='MA'> MA</td>
+      <td colspan="2" ><input type="checkbox" name="degree_name[]" value='MDiv'> MDiv</td>
+     </tr>
+     <tr>
+      <td><input type="checkbox" name="degree_name[]" value='MPH'> MPH</td>
+      <td><input type="checkbox" name="degree_name[]" value='MS'> MS</td>
+      <td><input type="checkbox" name="degree_name[]" value='MSPH'> MSPH</td>
+      <td><input type="checkbox" name="degree_name[]" value='MTS'> MTS</td>
+      <td><input type="checkbox" name="degree_name[]" value='PhD'> PhD</td>
+      <td><input type="checkbox" name="degree_name[]" value='ThD'> ThD</td>
+     </tr>
+    </table>
     
     </fieldset>         
         
 <fieldset>
         <b>Document Type:</b>
     
-    <div> <input type="checkbox" name="document_type[]" value='ALL' class="checkall"> All </div>
-    <div> <input type="checkbox" name="document_type[]" value='Dissertation'> Dissertation </div>
-    <div> <input type="checkbox" name="document_type[]" value='Honors Thesis'> Honors Thesis </div>
-    <div> <input type="checkbox" name="document_type[]" value="MasterXs Thesis"> Master's Thesis </div>
+    <table>
+     <tr>
+      <td colspan="3"><input type="checkbox" name="document_type[]" value='ALL' class="checkall"> All</td>
+     </tr>
+     <tr>
+      <td><input type="checkbox" name="document_type[]" value='Dissertation'> Dissertation</td>
+      <td><input type="checkbox" name="document_type[]" value='Honors Thesis'> Honors Thesis</td>
+      <td><input type="checkbox" name="document_type[]" value="MasterXs Thesis"> Master's Thesis</td>
+     </tr>
+    </table>
     
     </fieldset>
         
 <fieldset>
         <b>Embargo Requested:</b>
     
-    <div> <input type="checkbox" name="embargo_duration[]" value='ALL' class="checkall"> All </div>
-    <div> <input type="checkbox" name="embargo_duration[]" value='0 days'> 0 days </div>
-    <div> <input type="checkbox" name="embargo_duration[]" value='6 months'> 6 months </div>
-    <div> <input type="checkbox" name="embargo_duration[]" value='1 year'> 1 year </div>
-    <div> <input type="checkbox" name="embargo_duration[]" value='2 years'> 2 years </div>
-    <div> <input type="checkbox" name="embargo_duration[]" value='6 years'> 6 years </div>
+    <table>
+     <tr>
+     <td colspan="5"><input type="checkbox" name="embargo_duration[]" value='ALL' class="checkall"> All</td>
+     </tr>
+     <tr>
+      <td><input type="checkbox" name="embargo_duration[]" value='0 days'> 0 days</td>
+      <td><input type="checkbox" name="embargo_duration[]" value='6 months'> 6 months</td>
+      <td><input type="checkbox" name="embargo_duration[]" value='1 year'> 1 year</td>
+      <td><input type="checkbox" name="embargo_duration[]" value='2 years'> 2 years</td>
+      <td><input type="checkbox" name="embargo_duration[]" value='6 years'> 6 years</td>
+     </tr>
+    </table>
+    
 </fieldset>
     
 <fieldset>
         <b>Language:</b>
     
-    <div> <input type="checkbox" name="language[]" value='ALL' class="checkall"> All </div>
-    <div> <input type="checkbox" name="language[]" value='English'> English </div>
-    <div> <input type="checkbox" name="language[]" value='French'> French </div>
-    <div> <input type="checkbox" name="language[]" value='Spanish'> Spanish </div>
+    <table>
+    <tr>
+     <td colspan="3"><input type="checkbox" name="language[]" value='ALL' class="checkall"> All</td>
+    </tr>
+    <tr>
+     <td><input type="checkbox" name="language[]" value='English'> English</td>
+    <td><input type="checkbox" name="language[]" value='French'> French</td>
+    <td><input type="checkbox" name="language[]" value='Spanish'> Spanish</td>
+    </tr>
+    </table>
 </fieldset>
         
 <fieldset>
         <b>School:</b>
     
-    <div> <input type="checkbox" name="collection[]" value='ALL' class="checkall"> All </div>
-    <div> <input type="checkbox" name="collection[]" value='emory-control:ETD-Candler-collection'> 
-        <?=$this->schools->getLabel($this->schools->getIdByFedoraCollection('emory-control:ETD-Candler-collection')) ?> </div>
-    <div> <input type="checkbox" name="collection[]" value='emory-control:ETD-College-collection'> 
-        <?=$this->schools->getLabel($this->schools->getIdByFedoraCollection('emory-control:ETD-College-collection')) ?> </div>
-    <div> <input type="checkbox" name="collection[]" value='emory-control:ETD-GradSchool-collection'> 
-        <?=$this->schools->getLabel($this->schools->getIdByFedoraCollection('emory-control:ETD-GradSchool-collection')) ?> </div>
-    <div> <input type="checkbox" name="collection[]" value='emory-control:ETD-Rollins-collection'> 
-        <?=$this->schools->getLabel($this->schools->getIdByFedoraCollection('emory-control:ETD-Rollins-collection')) ?> </div>
+    <table>
+     <tr>
+      <td colspan="2"><input type="checkbox" name="collection[]" value='ALL' class="checkall"> All</td>
+     </tr>
+     <tr>
+      <td><input type="checkbox" name="collection[]" value='emory-control:ETD-Candler-collection'> 
+       <?=$this->schools->getLabel($this->schools->getIdByFedoraCollection('emory-control:ETD-Candler-collection')) ?></td>
+      <td><input type="checkbox" name="collection[]" value='emory-control:ETD-College-collection'> 
+       <?=$this->schools->getLabel($this->schools->getIdByFedoraCollection('emory-control:ETD-College-collection')) ?></td>
+     </tr>
+     <tr>
+      <td><input type="checkbox" name="collection[]" value='emory-control:ETD-GradSchool-collection'> 
+       <?=$this->schools->getLabel($this->schools->getIdByFedoraCollection('emory-control:ETD-GradSchool-collection')) ?></td>
+      <td><input type="checkbox" name="collection[]" value='emory-control:ETD-Rollins-collection'> 
+       <?=$this->schools->getLabel($this->schools->getIdByFedoraCollection('emory-control:ETD-Rollins-collection')) ?></td>
+     </tr>
+    </table>
 </fieldset>
         
 <fieldset>
         <b>Program:</b>
-        <div>
-            <?=$this->formSelect('program_id[]', null, array('multiple'=> 'multiple', 'size'=>10), $this->programs);?>
-        </div>
+        
+        <?=$this->formSelect('program_id[]', null, array('multiple'=> 'multiple', 'size'=>10), $this->programs);?>
+        
 
 </fieldset>
         
 <fieldset>
         <b>Subfield:</b>
-        <div>
-            <?=$this->formSelect('subfield_id[]', null, array('multiple'=> 'multiple', 'size'=>10), $this->subfields);?>
-        </div>
-
-
+        <?=$this->formSelect('subfield_id[]', null, array('multiple'=> 'multiple', 'size'=>10), $this->subfields);?>
+        
 </fieldset>        
         
 <fieldset>
         <b>Select Output Fields:</b>
     
-    <input type="checkbox" name="include[]" value='ALL' class="checkall"> All
-    <input type="checkbox" name="include[]" value='author'> Author
-    <input type="checkbox" name="include[]" value='dateIssued'> Date Published
-    <input type="checkbox" name="include[]" value='degree_name'> Degree
-    <input type="checkbox" name="include[]" value='document_type'> Document Type
-    <input type="checkbox" name="include[]" value='embargo_duration'> Embargo Duration
-    <input type="checkbox" name="include[]" value='language'> Language
-    <input type="checkbox" name="include[]" value='program'> Program
-    <input type="checkbox" name="include[]" value='program_id'> Program ID
-    <input type="checkbox" name="include[]" value='subfield'> Subfield
-    <input type="checkbox" name="include[]" value='subfield_id'> Subfield ID
-    <input type="checkbox" name="include[]" value='subject'> Subjects
-    <input type="checkbox" name="include[]" value='title'> Title
-    <input type="checkbox" name="include[]" value='advisor'> Committee Chair
-    <input type="checkbox" name="include[]" value='keyword'> Keywords
-    <input type="checkbox" name="include[]" value='status'> Status
-    <input type="checkbox" name="include[]" value='partneringagencies'> Partnering Agencies
-    <input type="checkbox" name="include[]" value='collection'> School
+    <table>
+     <tr>
+      <td colspan="5"><input type="checkbox" name="include[]" value='ALL' class="checkall"> All</td>
+     </tr>
+     <tr>
+      <td><input type="checkbox" name="include[]" value='author'> Author</td>
+      <td><input type="checkbox" name="include[]" value='dateIssued'> Date Published
+      <td><input type="checkbox" name="include[]" value='degree_name'> Degree
+      <td colspan="2"><input type="checkbox" name="include[]" value='document_type'> Document Type
+     </tr>
+     <tr>
+      <td><input type="checkbox" name="include[]" value='embargo_duration'> Embargo Duration
+      <td><input type="checkbox" name="include[]" value='language'> Language
+      <td><input type="checkbox" name="include[]" value='program'> Program
+      <td colspan="2"><input type="checkbox" name="include[]" value='program_id'> Program ID
+     <tr>
+     <tr>
+      <td><input type="checkbox" name="include[]" value='subfield'> Subfield
+      <td><input type="checkbox" name="include[]" value='subfield_id'> Subfield ID
+      <td><input type="checkbox" name="include[]" value='subject'> Subjects
+      <td colspan="2"><input type="checkbox" name="include[]" value='title'> Title
+     </tr>
+     <tr>
+      <td><input type="checkbox" name="include[]" value='advisor'> Committee Chair
+      <td><input type="checkbox" name="include[]" value='keyword'> Keywords
+      <td><input type="checkbox" name="include[]" value='status'> Status
+      <td><input type="checkbox" name="include[]" value='partneringagencies'> Partnering Agencies
+      <td><input type="checkbox" name="include[]" value='collection'> School
+    </tr>
+    </table>
     
 </fieldset>
     
@@ -132,8 +185,8 @@
 <script language="Javascript" type="text/javascript">
     
     /*
-     * Toggle Checkboxes in a  logical way
-     * the select all box must have the class 'checkall' and a value of ''
+     * Toggle Checkboxes, publish_from and publish_to in a  logical way.
+     * The select for All must have the class 'checkall' and a value of 'ALL'
      **/
     $j(function () {
     $j('.checkall').on('click', function () {
@@ -160,16 +213,24 @@
     
     if(this.checked){
         to.prop('disabled', false);
+        to.prop('value', '');
         from.prop('disabled', false);
+        from.prop('value', '');
     }
     else{
         to.prop('disabled', true);
-        to.prop('value', '');
+        to.prop('value', 'YYYYMMDD');
         from.prop('disabled', true);
-        from.prop('value', '');
+        from.prop('value', 'YYYYMMDD');
     }
     
     });
+    
+    // Date picker
+    $j('#pub-from,, #pub-to' ).datepicker({ dateFormat: "yymmdd", 
+                                            changeYear: true, 
+                                            constrainInput: true, 
+                                            yearRange: "2007:" });
     
         
 });
