--- a/src/app/layouts/scripts/site.phtml
+++ b/src/app/layouts/scripts/site.phtml
@@ -1,7 +1,7 @@
 <?= $this->doctype('XHTML1_STRICT') ?>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-
+<meta http-equiv="X-UA-Compatible" content="IE=7" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
 <? if ($this->env == "production"): ?>
@@ -142,7 +142,7 @@
  <a
     href="http://www.emory.edu/copyright.cfm">&copy; 2008 Emory
     University.</a>
-   Version 1.14 updated 5/2013.
+   Version 1.15 updated 9/2013.
  <a href="<?= $this->url(array("controller" => "docs", "action" => "ip"), '', true); ?>">Rights and Privileges</a>
  <?/*| <a href="<?= $this->url(array("controller" => "statistics", "action" => "index"), '', true); ?>">Access Statistics</a> */?>
 </div>
