--- a/src/app/views/scripts/email/submission.phtml
+++ b/src/app/views/scripts/email/submission.phtml
@@ -61,7 +61,7 @@ dissertation or thesis. In part 3 of that form, you must choose between the "Ope
 <? endif ?>
 
 <? elseif($this->etd->schoolId() == "honors"): ?>
-<li><p>All students must submit a hard copy of the ETD Submission Agreement Form to Ms. Elizabeth Fricker in White Hall 300 by April 22, 2010 along with other required forms. You may find these requirements in the guidelines distributed earlier or on the LearnLink conference for College Honors.</p>
+<li><p>All students must submit a hard copy of the ETD Submission Agreement Form to Ms. Elizabeth Fricker in White Hall 300 along with other required forms. You may find these requirements in the guidelines distributed earlier or on the LearnLink conference for College Honors.</p>
 <? if ($this->etd->mods->isEmbargoRequested()): ?>
    You have requested <b>Restricted Access</b>. The full text of your work will be published in
    the repository immediately after the expiration of your access
