--- a/src/app/views/scripts/report/preview-export.phtml
+++ b/src/app/views/scripts/report/preview-export.phtml
@@ -43,6 +43,12 @@ table#report-results tr th { margin: 0; padding: 5px; border: 1px solid black; b
                         echo $term;
                         ?>
                 <? else: ?>
+                    <?if ($var['field'] == 'abstract'): ?>
+                        <? 
+                            $ab_etd = new etd($etd->PID);
+                            echo $ab_etd->mods->abstract; 
+                        ?>
+                    <? endif ?>
                         <?= $etd->$var['field']; ?>
                 <? endif ?>
                 </td>
